--- a/Cafe.html
+++ b/Cafe.html
@@ -102,7 +102,7 @@
                     <div class="box">
                         <div id="image">
                             <img
-                                src="https://scontent.fmnl9-1.fna.fbcdn.net/v/t1.15752-9/409789087_755704436604087_3865299438524754802_n.png?_nc_cat=109&ccb=1-7&_nc_sid=8cd0a2&_nc_ohc=HDz02VlGQnEAX9ywmGJ&_nc_ht=scontent.fmnl9-1.fna&oh=03_AdQ-NI2nRBNpHY_AsFRJx2K4_8ldUv587Ylnhg0kMewIiw&oe=65BB0A88">
+                                src="Img/Americano.png">
                         </div>
                         <div>
                             <h3>Americano</h3>
@@ -113,7 +113,7 @@
                     <div class="box">
                         <div id="image">
                             <img
-                                src="https://scontent.fmnl9-4.fna.fbcdn.net/v/t1.15752-9/411207506_327775486796271_2935395629546957501_n.png?stp=dst-png_p1080x2048&_nc_cat=106&ccb=1-7&_nc_sid=8cd0a2&_nc_ohc=nDOdgIffT5IAX9m4RoZ&_nc_ht=scontent.fmnl9-4.fna&oh=03_AdQzjvG1lFE3-mCj7dT8qfapCnj4INkWk0zmkZ908Iy1Og&oe=65BB2194">
+                                src="Img/SpanishLatte.png">
                         </div>
                         <div>
                             <h3>Spanish Latte</h3>
@@ -124,7 +124,7 @@
                     <div class="box">
                         <div id="image">
                             <img
-                                src="https://scontent.fmnl25-2.fna.fbcdn.net/v/t1.15752-9/411260631_387952816945615_837264173974752449_n.png?_nc_cat=111&ccb=1-7&_nc_sid=8cd0a2&_nc_ohc=M91-ulK7wj0AX-f2waG&_nc_ht=scontent.fmnl25-2.fna&oh=03_AdSjaozuQGt2vJ4-tT7exE7InquLx1pIZVCm0u3psyrs2w&oe=65BC6287">
+                                src="Img/VanillaLatte.png">
                         </div>
                         <div>
                             <h3>Vanilla Latte</h3>
@@ -135,7 +135,7 @@
                     <div class="box">
                         <div id="image">
                             <img
-                                src="https://scontent.fmnl25-5.fna.fbcdn.net/v/t1.15752-9/409519747_347565544648678_5175436066527081746_n.png?_nc_cat=104&ccb=1-7&_nc_sid=8cd0a2&_nc_ohc=VDeJxf4lo2UAX_c48XD&_nc_ht=scontent.fmnl25-5.fna&oh=03_AdRnHcImSmPbNymSBm4vq2A28H4bTF9mZ83u8dWPBUYosA&oe=65BC452E">
+                                src="Img/FrenchVanilla.png">
                         </div>
                         <div>
                             <h3>French Vanilla</h3>
@@ -146,7 +146,7 @@
                     <div class="box">
                         <div id="image">
                             <img
-                                src="https://scontent.fmnl9-4.fna.fbcdn.net/v/t1.15752-9/411207506_327775486796271_2935395629546957501_n.png?stp=dst-png_p1080x2048&_nc_cat=106&ccb=1-7&_nc_sid=8cd0a2&_nc_ohc=nDOdgIffT5IAX9m4RoZ&_nc_ht=scontent.fmnl9-4.fna&oh=03_AdQzjvG1lFE3-mCj7dT8qfapCnj4INkWk0zmkZ908Iy1Og&oe=65BB2194">
+                                src="Img/SpanishLatte.png">
                         </div>
                         <div>
                             <h3>White Mocha</h3>
@@ -157,7 +157,7 @@
                     <div class="box">
                         <div id="image">
                             <img
-                                src="https://scontent.fmnl9-4.fna.fbcdn.net/v/t1.15752-9/410840276_880487394081711_949639619906648434_n.png?stp=dst-png_p1080x2048&_nc_cat=106&ccb=1-7&_nc_sid=8cd0a2&_nc_ohc=7dwopMcKIVQAX96DAhL&_nc_ht=scontent.fmnl9-4.fna&oh=03_AdQUH8C1qXOzYSLiXh5ROZ3vX53q5t8L17IekCWoyqmZ_Q&oe=65BB239A">
+                                src="Img/CaramelMacchiato.png">
                         </div>
                         <div>
                             <h3>Caramel Macchiato</h3>
@@ -168,7 +168,7 @@
                     <div class="box">
                         <div id="image">
                             <img
-                                src="https://scontent.fmnl9-4.fna.fbcdn.net/v/t1.15752-9/415261882_1059211705425299_5941493282100827392_n.png?stp=dst-png_p1080x2048&_nc_cat=106&ccb=1-7&_nc_sid=8cd0a2&_nc_ohc=1Vb4B0YokJ4AX-SQI-E&_nc_ht=scontent.fmnl9-4.fna&oh=03_AdSmEdk8WKN1NR3u40_S34TsTf2AgFAx65r6XQNjYVMWcg&oe=65BB3A8F">
+                                src="Img/CaPheSuaDA.png">
                         </div>
                         <div>
                             <h3>Ca Phe Sua Da</h3>
@@ -179,7 +179,7 @@
                     <div class="box">
                         <div id="image">
                             <img
-                                src="https://scontent.fmnl9-4.fna.fbcdn.net/v/t1.15752-9/411421294_393827059819555_2905946994637606126_n.png?stp=dst-png_p1080x2048&_nc_cat=105&ccb=1-7&_nc_sid=8cd0a2&_nc_ohc=wMLvVIEqh1AAX_iBmQa&_nc_ht=scontent.fmnl9-4.fna&oh=03_AdTWpUJhkF9_WivsZuUEleAmxbuMG9TQvTii9hkCKjJmPQ&oe=65BB0FA3">
+                                src="Img/MochaHazelNut.png">
                         </div>
                         <div>
                             <h3>Mocha Hazelnut</h3>
@@ -194,7 +194,7 @@
                     <div class="box">
                         <div id="image">
                             <img
-                                src="https://scontent.fmnl9-3.fna.fbcdn.net/v/t1.15752-9/409659573_7074298769327318_4717729438271685607_n.png?_nc_cat=100&ccb=1-7&_nc_sid=8cd0a2&_nc_ohc=1GChQV_r5ykAX-ApSxW&_nc_ht=scontent.fmnl9-3.fna&oh=03_AdQmpPuY1erpXNThcaOEuRzeTC22LSPN2Ws_Dd1pU7OJqA&oe=65BB3AD4">
+                                src="Img/StrawberryCream.png">
                         </div>
                         <div>
                             <h3>Strawberry & Cream</h3>
@@ -205,7 +205,7 @@
                     <div class="box">
                         <div id="image">
                             <img
-                                src="https://scontent.fmnl9-4.fna.fbcdn.net/v/t1.15752-9/411421294_393827059819555_2905946994637606126_n.png?stp=dst-png_p1080x2048&_nc_cat=105&ccb=1-7&_nc_sid=8cd0a2&_nc_ohc=wMLvVIEqh1AAX_iBmQa&_nc_ht=scontent.fmnl9-4.fna&oh=03_AdTWpUJhkF9_WivsZuUEleAmxbuMG9TQvTii9hkCKjJmPQ&oe=65BB0FA3">
+                                src="Img/MochaHazelNut.png">
                         </div>
                         <div>
                             <h3>Iced Chocolate</h3>
@@ -216,7 +216,7 @@
                     <div class="box">
                         <div id="image">
                             <img
-                                src="https://scontent.fmnl9-3.fna.fbcdn.net/v/t1.15752-9/410812323_623528883192320_1766463001047283345_n.png?stp=dst-png_p1080x2048&_nc_cat=100&ccb=1-7&_nc_sid=8cd0a2&_nc_ohc=7poiNlfHfIIAX_Dr0v4&_nc_ht=scontent.fmnl9-3.fna&oh=03_AdSMy3VD4jKl9dRwUxcmUxkjmowak3p6o4_glvmRA1lQpw&oe=65BB375A">
+                                src="Img/MatchaHazelnut.png">
                         </div>
                         <div>
                             <h3>Matcha Hazelnut</h3>
@@ -227,7 +227,7 @@
                     <div class="box">
                         <div id="image">
                             <img
-                                src="https://scontent.fmnl9-4.fna.fbcdn.net/v/t1.15752-9/410725373_347697794686760_8586516611257837489_n.png?stp=dst-png_p1080x2048&_nc_cat=105&ccb=1-7&_nc_sid=8cd0a2&_nc_ohc=h87Ya7danucAX_6aqzg&_nc_ht=scontent.fmnl9-4.fna&oh=03_AdREHZ9Wg36qSzT9IQ3z85H1h1VJDwkY7qhmZIWlsEA4nw&oe=65BB37BD">
+                                src="Img/ThaiMilkTea.png">
                         </div>
                         <div>
                             <h3>Authentic Thai Milk Tea</h3>
@@ -241,7 +241,7 @@
                     <div class="box">
                         <div id="image">
                             <img
-                                src="https://scontent.fmnl9-3.fna.fbcdn.net/v/t1.15752-9/409659573_7074298769327318_4717729438271685607_n.png?_nc_cat=100&ccb=1-7&_nc_sid=8cd0a2&_nc_ohc=1GChQV_r5ykAX-ApSxW&_nc_ht=scontent.fmnl9-3.fna&oh=03_AdQmpPuY1erpXNThcaOEuRzeTC22LSPN2Ws_Dd1pU7OJqA&oe=65BB3AD4">
+                                src="Img/StrawberryCream.png">
                         </div>
                         <div>
                             <h3>Strawberry & Cream Frappe</h3>
@@ -252,7 +252,7 @@
                     <div class="box">
                         <div id="image">
                             <img
-                                src="https://scontent.fmnl9-1.fna.fbcdn.net/v/t1.15752-9/409564403_364224292876839_8499262211045818543_n.png?stp=dst-png_p1080x2048&_nc_cat=111&ccb=1-7&_nc_sid=8cd0a2&_nc_ohc=2bkH8yM4nh8AX98FMhS&_nc_ht=scontent.fmnl9-1.fna&oh=03_AdSXj5CjhRuq4I-ixmjmOSNEBB6P1aNwAbiaKgwjKEhBaQ&oe=65BB1D7F">
+                                src="Img/JavaChip.png">
                         </div>
                         <div>
                             <h3>Java Chip Frappe</h3>
@@ -263,7 +263,7 @@
                     <div class="box">
                         <div id="image">
                             <img
-                                src="https://scontent.fmnl9-4.fna.fbcdn.net/v/t1.15752-9/411146557_1032243771401395_3404694986574360667_n.png?stp=dst-png_p1080x2048&_nc_cat=106&ccb=1-7&_nc_sid=8cd0a2&_nc_ohc=kjdkaKheSpYAX_q2rqt&_nc_ht=scontent.fmnl9-4.fna&oh=03_AdS2lhjTda1VsBr_1IQNd7DLORgZ3aRK7_0Ze0awcUhMeg&oe=65BB2CAE">
+                                src="Img/VeryMatcha.png">
                         </div>
                         <div>
                             <h3>Very Matcha Frappe</h3>
@@ -274,7 +274,7 @@
                     <div class="box">
                         <div id="image">
                             <img
-                                src="https://scontent.fmnl9-4.fna.fbcdn.net/v/t1.15752-9/409744870_858755295999124_6229551662230683292_n.png?stp=dst-png_p1080x2048&_nc_cat=106&ccb=1-7&_nc_sid=8cd0a2&_nc_ohc=acC8GDLDbAcAX8_hrVd&_nc_ht=scontent.fmnl9-4.fna&oh=03_AdSQ8BWgbJa9hKyep2Z1Tzv_bDr42aT2fEzC5TyPQKSndQ&oe=65BB0E3E">
+                                src="Img/CaramelMacchiatoFrappe.png">
                         </div>
                         <div>
                             <h3>Caramel Macchiato Frappe</h3>
@@ -285,7 +285,7 @@
                     <div class="box">
                         <div id="image">
                             <img
-                                src="https://scontent.fmnl9-4.fna.fbcdn.net/v/t1.15752-9/409744870_858755295999124_6229551662230683292_n.png?stp=dst-png_p1080x2048&_nc_cat=106&ccb=1-7&_nc_sid=8cd0a2&_nc_ohc=acC8GDLDbAcAX8_hrVd&_nc_ht=scontent.fmnl9-4.fna&oh=03_AdSQ8BWgbJa9hKyep2Z1Tzv_bDr42aT2fEzC5TyPQKSndQ&oe=65BB0E3E">
+                                src="Img/SpanishLatteFrappe.png">
                         </div>
                         <div>
                             <h3>Spanish Latte Frappe</h3>
@@ -300,7 +300,7 @@
                     <div class="box">
                         <div id="image-food">
                             <img
-                                src="https://scontent.fmnl25-1.fna.fbcdn.net/v/t1.15752-9/414734769_348791664529672_3440035989597227471_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=8cd0a2&_nc_ohc=mwjsOl4BMu8AX-pMh5c&_nc_ht=scontent.fmnl25-1.fna&oh=03_AdRnO2Y4IE8PgeD_qffr783bjO3odKuw7qJYsZgcov6bfg&oe=65BC6377">
+                                src="Img/Foods.jpg">
                         </div>
                         <div>
                             <h3>Chocolate Chip Cookies</h3>
@@ -323,7 +323,7 @@
         <div class="about-content">
             <div class="about-image">
                 <center><img
-                        src="https://scontent.fmnl25-1.fna.fbcdn.net/v/t1.15752-9/409399836_2119550575058055_372569310279176139_n.png?_nc_cat=108&ccb=1-7&_nc_sid=8cd0a2&_nc_ohc=1B42Q3BFTasAX8sRxND&_nc_ht=scontent.fmnl25-1.fna&oh=03_AdT5hzFOhQvYzlAhZZalz1BZqD3n95uhwGZGP6CQ_X1YeQ&oe=65BC7F7C"
+                        src="Img/Priam'sLogo.png"
                         alt=""></center>
             </div>
             <div class="about-texts">
@@ -349,7 +349,7 @@
         </div>
         <div class="history-content">
             <div class="Owners">
-                <img src="https://scontent.fmnl25-4.fna.fbcdn.net/v/t1.15752-9/412144479_1443122822978156_8309251569148642311_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=8cd0a2&_nc_ohc=DE9oNaLDLQwAX_vcd13&_nc_ht=scontent.fmnl25-4.fna&oh=03_AdSULT33IY7P74lgXE5nKv0l6AQY0gyed7hI4zXvZ2uKjQ&oe=65BCC7B6"
+                <img src="Img/Owners.jpg"
                     alt="">
             </div>
             <center>
