--- a/index.html
+++ b/index.html
@@ -101,8 +101,7 @@
                     <h2>Coffee</h2>
                     <div class="box">
                         <div id="image">
-                            <img
-                                src="Img/Americano.png">
+                            <img src="Img/Americano.png">
                         </div>
                         <div>
                             <h3>Americano</h3>
@@ -112,8 +111,7 @@
                     </div>
                     <div class="box">
                         <div id="image">
-                            <img
-                                src="Img/SpanishLatte.png">
+                            <img src="Img/SpanishLatte.png">
                         </div>
                         <div>
                             <h3>Spanish Latte</h3>
@@ -123,8 +121,7 @@
                     </div>
                     <div class="box">
                         <div id="image">
-                            <img
-                                src="Img/VanillaLatte.png">
+                            <img src="Img/VanillaLatte.png">
                         </div>
                         <div>
                             <h3>Vanilla Latte</h3>
@@ -134,8 +131,7 @@
                     </div>
                     <div class="box">
                         <div id="image">
-                            <img
-                                src="Img/FrenchVanilla.png">
+                            <img src="Img/FrenchVanilla.png">
                         </div>
                         <div>
                             <h3>French Vanilla</h3>
@@ -145,8 +141,7 @@
                     </div>
                     <div class="box">
                         <div id="image">
-                            <img
-                                src="Img/SpanishLatte.png">
+                            <img src="Img/SpanishLatte.png">
                         </div>
                         <div>
                             <h3>White Mocha</h3>
@@ -156,8 +151,7 @@
                     </div>
                     <div class="box">
                         <div id="image">
-                            <img
-                                src="Img/CaramelMacchiato.png">
+                            <img src="Img/CaramelMacchiato.png">
                         </div>
                         <div>
                             <h3>Caramel Macchiato</h3>
@@ -167,8 +161,7 @@
                     </div>
                     <div class="box">
                         <div id="image">
-                            <img
-                                src="Img/CaPheSuaDA.png">
+                            <img src="Img/CaPheSuaDA.png">
                         </div>
                         <div>
                             <h3>Ca Phe Sua Da</h3>
@@ -178,8 +171,7 @@
                     </div>
                     <div class="box">
                         <div id="image">
-                            <img
-                                src="Img/MochaHazelNut.png">
+                            <img src="Img/MochaHazelNut.png">
                         </div>
                         <div>
                             <h3>Mocha Hazelnut</h3>
@@ -193,8 +185,7 @@
                     <h2>Non-Coffee</h2>
                     <div class="box">
                         <div id="image">
-                            <img
-                                src="Img/StrawberryCream.png">
+                            <img src="Img/StrawberryCream.png">
                         </div>
                         <div>
                             <h3>Strawberry & Cream</h3>
@@ -204,8 +195,7 @@
                     </div>
                     <div class="box">
                         <div id="image">
-                            <img
-                                src="Img/MochaHazelNut.png">
+                            <img src="Img/MochaHazelNut.png">
                         </div>
                         <div>
                             <h3>Iced Chocolate</h3>
@@ -215,8 +205,7 @@
                     </div>
                     <div class="box">
                         <div id="image">
-                            <img
-                                src="Img/MatchaHazelnut.png">
+                            <img src="Img/MatchaHazelnut.png">
                         </div>
                         <div>
                             <h3>Matcha Hazelnut</h3>
@@ -226,8 +215,7 @@
                     </div>
                     <div class="box">
                         <div id="image">
-                            <img
-                                src="Img/ThaiMilkTea.png">
+                            <img src="Img/ThaiMilkTea.png">
                         </div>
                         <div>
                             <h3>Authentic Thai Milk Tea</h3>
@@ -240,8 +228,7 @@
                     <h2>Frappe</h2>
                     <div class="box">
                         <div id="image">
-                            <img
-                                src="Img/StrawberryCream.png">
+                            <img src="Img/StrawberryCream.png">
                         </div>
                         <div>
                             <h3>Strawberry & Cream Frappe</h3>
@@ -251,8 +238,7 @@
                     </div>
                     <div class="box">
                         <div id="image">
-                            <img
-                                src="Img/JavaChip.png">
+                            <img src="Img/JavaChip.png">
                         </div>
                         <div>
                             <h3>Java Chip Frappe</h3>
@@ -262,8 +248,7 @@
                     </div>
                     <div class="box">
                         <div id="image">
-                            <img
-                                src="Img/VeryMatcha.png">
+                            <img src="Img/VeryMatcha.png">
                         </div>
                         <div>
                             <h3>Very Matcha Frappe</h3>
@@ -273,8 +258,7 @@
                     </div>
                     <div class="box">
                         <div id="image">
-                            <img
-                                src="Img/CaramelMacchiatoFrappe.png">
+                            <img src="Img/CaramelMacchiatoFrappe.png">
                         </div>
                         <div>
                             <h3>Caramel Macchiato Frappe</h3>
@@ -284,8 +268,7 @@
                     </div>
                     <div class="box">
                         <div id="image">
-                            <img
-                                src="Img/SpanishLatteFrappe.png">
+                            <img src="Img/SpanishLatteFrappe.png">
                         </div>
                         <div>
                             <h3>Spanish Latte Frappe</h3>
@@ -299,8 +282,7 @@
                     <h5>*depends on availability.</h5>
                     <div class="box">
                         <div id="image-food">
-                            <img
-                                src="Img/Foods.jpg">
+                            <img src="Img/Foods.jpg">
                         </div>
                         <div>
                             <h3>Chocolate Chip Cookies</h3>
@@ -322,9 +304,10 @@
         </div>
         <div class="about-content">
             <div class="about-image">
-                <center><img
-                        src="Img/Priam'sLogo.png"
-                        alt=""></center>
+                <center><iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1931.1354444689807!2d121.15693478942214!3d14.526491646999952!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397c7c385521c29%3A0x229d11bd7e10c153!2zUHJpYW3igJlzIENhZsOp!5e0!3m2!1sen!2sph!4v1704864772246!5m2!1sen!2sph"
+                        width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe></center>
             </div>
             <div class="about-texts">
                 <h4>
@@ -349,8 +332,7 @@
         </div>
         <div class="history-content">
             <div class="Owners">
-                <img src="Img/Owners.jpg"
-                    alt="">
+                <img src="Img/Owners.jpg" alt="">
             </div>
             <center>
                 <h3>Owners: Leonor Bianca Lacostales and Jerel Lacostales</h3>
@@ -367,21 +349,29 @@
         </div>
 
     </div>
-    
+
     <!--Footer Section-->
     <div class="footer">
         <div class="footer-box">
             <div class="social-media">
                 <a href="https://www.facebook.com/priamscafe" target="_blank">
-                    <svg xmlns="http://www.w3.org/2000/svg" height="35" width="50" viewBox="0 0 512 512"><path d="M512 256C512 114.6 397.4 0 256 0S0 114.6 0 256C0 376 82.7 476.8 194.2 504.5V334.2H141.4V256h52.8V222.3c0-87.1 39.4-127.5 125-127.5c16.2 0 44.2 3.2 55.7 6.4V172c-6-.6-16.5-1-29.6-1c-42 0-58.2 15.9-58.2 57.2V256h83.6l-14.4 78.2H287V510.1C413.8 494.8 512 386.9 512 256h0z"/></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" height="35" width="50" viewBox="0 0 512 512">
+                        <path
+                            d="M512 256C512 114.6 397.4 0 256 0S0 114.6 0 256C0 376 82.7 476.8 194.2 504.5V334.2H141.4V256h52.8V222.3c0-87.1 39.4-127.5 125-127.5c16.2 0 44.2 3.2 55.7 6.4V172c-6-.6-16.5-1-29.6-1c-42 0-58.2 15.9-58.2 57.2V256h83.6l-14.4 78.2H287V510.1C413.8 494.8 512 386.9 512 256h0z" />
+                    </svg>
                 </a>
                 <a href="https://www.instagram.com/priamscafe" target="_blank">
-                    <svg xmlns="http://www.w3.org/2000/svg" height="35" width="50" viewBox="0 0 448 512">   <path d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"/></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" height="35" width="50" viewBox="0 0 448 512">
+                        <path
+                            d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z" />
+                    </svg>
                 </a>
                 <a href="https://www.tiktok.com/@priamscafe" target="_blank">
-                    <svg xmlns="http://www.w3.org/2000/svg" height="35" width="50" viewBox="0 0 448 512"><path d="M448 209.9a210.1 210.1 0 0 1 -122.8-39.3V349.4A162.6 162.6 0 1 1 185 188.3V278.2a74.6 74.6 0 1 0 52.2 71.2V0l88 0a121.2 121.2 0 0 0 1.9 22.2h0A122.2 122.2 0 0 0 381 102.4a121.4 121.4 0 0 0 67 20.1z"/></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" height="35" width="50" viewBox="0 0 448 512">
+                        <path
+                            d="M448 209.9a210.1 210.1 0 0 1 -122.8-39.3V349.4A162.6 162.6 0 1 1 185 188.3V278.2a74.6 74.6 0 1 0 52.2 71.2V0l88 0a121.2 121.2 0 0 0 1.9 22.2h0A122.2 122.2 0 0 0 381 102.4a121.4 121.4 0 0 0 67 20.1z" />
+                    </svg>
                 </a>
-                <h5>Address: #2 Col Guido St San Roque 1940 Angono, Philippines</h5>
             </div>
         </div>
     </div>
